@@ -165,8 +165,9 @@ static void libgps_dump_state(struct gps_data_t *collect)
 
     /* no need to dump the entire state, this is a sanity check */
 #ifndef USE_QT
-    (void)fprintf(debugfp, "flags: (0x%04llx) %s\n",
-		  collect->set, gps_maskdump(collect->set));
+    /* will fail on a 32-bit macine */
+    (void)fprintf(debugfp, "flags: (0x%04x) %s\n",
+		  (unsigned int)collect->set, gps_maskdump(collect->set));
 #endif
     if (collect->set & ONLINE_SET)
 	(void)fprintf(debugfp, "ONLINE: %lf\n", collect->online);
